--- a/static/main.css
+++ b/static/main.css
@@ -235,6 +235,7 @@ input[readonly] {
 	border: 1px solid red;
 	position: fixed;
 	left: 10px; right: 10px;
-	top: 10px; min-height: 30px;
+	top: 10px; min-height: 4em;
 	text-align: center;
+	font-size: 1.5em;
 }
