--- a/templates/index.html
+++ b/templates/index.html
@@ -13,9 +13,10 @@ const all_ccls = {{ all_ccls | tojson }};
 </head>
 <body>
 <header>
-<aside id=banner>You're on the legacy Mustard Mine. You can export all of your settings here and import them into
+<aside id=banner>You're on the deprecated Mustard Mine. You can export all of your settings here and import them into
 <a href="https://mustardmine.com/">the new Mustard Mine</a> which also incorporates full bot facilities. Haven't
-tried the new Mine yet? <a href="https://mustardmine.com/activate">Activate it here!</a></aside>
+tried the new Mine yet? <a href="https://mustardmine.com/activate">Activate it here!</a> This app will be shut down
+at some point in 2025, and only the new Mustard Mine will remain.</aside>
 <h1>Mustard Mine</h1>
 <p>Welcome, {{ username }}!</p>
 <div id=messages>
